Alignment correction for signature tours

--- a/client/src/components/tours.component/signature-tours/signature-tours.styles.scss
+++ b/client/src/components/tours.component/signature-tours/signature-tours.styles.scss
@@ -1,6 +1,10 @@
 @import '../../../App.scss';
 
 .signature-tours {
-  margin: 3rem 0;
+  margin: 3rem auto;
   padding: 2rem 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
